tests/rename/should_fail/T15611a.hs
main :: IO ()
main = Main.foo
